and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [Unreleased]

### Added

- NOVO COMANDO! `/inventario`
- NOVO SISTEMA! **ITEMS MÁGICOS** - Com itens mágicos, usuários podem aumentar suas chances de caça, trazendo alguns tipos de caças para sempre obterem sucesso
- Usuários banidos não podem ser mamados
- **Punição por inatividade:** Usuários que não usarem comandos por mais de 2 semanas vão perder itens da carteira! A punição se aplica a usuários que tem no mínimo uma dessas características: 60 demônios, 50 gigantes, 40 anjos, 30 arcanjos, 20 semideuses, 7 deuses ou 250000 estrelinhas. A punição depende de quantas semanas tu ta offline e a quantidade de itens que tu tens. O calculo é feito por a sua quantidade dividida por 8 ( ou 4 dependendo da quantidade que tens) vezes o numero de semanas que tu ficou fora. Lembrando que a cada dia acima de 2 semanas teus itens diminuem!. A Punição por Inatividade só começará a contar a partir de dezembro.
- Caso você tenha mais de 10 cores, a escolha de cores irá mudar para uma escolha de páginas

### Changed

- Opções de Comandos - Os comandos que utilizam opções de escolha foram melhorados para ficarem mais bonitinhos
- O modo que o ship é calculado foi alterado
- O comando de caçar calcula as caças em porcentagens agora! Use `/cacar tipo:probabilities` para mais informações
- O preço das caças foi alterado! Demônio 600 -> 1200, Gigante 1900 -> 1500, Anjo 3200 -> 2600, Arcanjo 5900 -> 2300, Semideus 8000 -> 6000, Deus 19000 -> 25000.
- O preço do roll foi alterado! 7000 -> 15000
- O preço das cores foi ajustado! Roxo 50000 -> 30000, Vermelho 100000 -> 40000, Ciano 150000 -> 50000, Verde 300000 -> 60000, Rosa 500000 -> 70000, Amarelo 40000 -> 80000, Sua Escolha 700000 -> 100000